2005-09-29 Alain Ritoux <alain.ritoux@6wind.com>

	* ospf_ism.c: generate SNMP traps on Interface state change
	* ospf_nsm.c: generate SNMP traps on Neighbour state change
	* ospf_snmp.[ch]: support for SNMP traps for interface and neighbours.

2005-09-29 Alain Ritoux <alain.ritoux@6wind.com>

	* ospf_vty.c: forece default route LSA to be re_issued whenever
	  cost is changed ( [no] ip ospf area XXX default-cost YYY)
	  Support ignore-mtu option
	* ospfd.h: define OSPF_MTU_IGNORE_DEFAULT
	* ospf_packet.c: support ignore-mtu option
	* ospf_interface.h: field added for skipping MTU check 
	* ospf_interface.c: fix memory leak in ospf_crypt_key_delete()
	  Set mtu_ignore field to default value
	* ospf_abr.[ch]: export ospf_abr_announce_network_to_area()
	* ospf_ism.h: add MACRO to convert internal ISM status into SNMP
	  correct values
	* ospf_snmp.c: add sanity check on LSA type in lsdb_lookup_next()
	  convert OSPFIFSTATE internal status into SNMP values

2005-09-28 Alain Ritoux <alain.ritoux@6wind.com>

	* ospf_packet.c: use new md5 API

2005-09-19 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf_lsa.h: (ospf_external_lsa_flush) Comment out the 5th argument
	  (nexthop) since it is not used in the function (except inside
	  some commented-out code).
	* ospf_lsa.c: (ospf_external_lsa_flush,ospf_external_lsa_refresh)
	  Comment out the 5th argument to ospf_external_lsa_flush.
	* ospf_asbr.c: (ospf_redistribute_withdraw) Comment out 5th arg
	  to ospf_external_lsa_flush.
	* ospf_vty.c: (no_ospf_default_information_originate) Eliminate 5th
	  uninitialized nexthop arg to ospf_external_lsa_flush.
	* ospf_zebra.c: (ospf_zebra_read_ipv4) Comment out 5th arg
	  to ospf_external_lsa_flush.
	* ospfd.c: (ospf_network_set) Comment out 5th arg
	  to ospf_external_lsa_flush.

2005-09-17 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf_opaque.c:
	  (ospf_opaque_lsa_refresh_schedule,ospf_opaque_lsa_flush_schedule)